# dep-scanner

./: .env.example  .gitignore  .gitlab-ci.yml  .windsurfrules  CLAUDE.md  CLIENT_README.md  GEMINI.md  PRD.md  README.md  SECURITY.md  SUBPROCESS_MONITORING_IMPLEMENTATION.md  airflow_final_results.json  airflow_scan_results.json  api-scan-report.html  api-scan-results.json  config.yaml  deleteme.csv  dependency-report.html  flask_results.json  generate_report.py  pyproject.toml  report_analysis.html  run_api_scan.py  sample_categories.json  scala-dependency-report.html  test_categorization_fix.py  test_main_fix.py  test_scala_api_example.scala  todo.md  verification_report.md  verify_unified_categorization.py
.claude/: settings.local.json
.clinerules/workflows/: run-application.md
.cursor/rules/: 01-project-overview.mdc  02-code-structure.mdc  03-workflow.mdc  04-configuration.mdc  05-development-guidelines.mdc  ask.mdc  bug.mdc  feature.mdc  refactor.mdc  run-application.mdc
.dev-resources/architecture/: subprocess-monitoring-architecture.md
.dev-resources/context/: session_summary.md  (+1 more)
docs/: reporting.md
examples/: client_example.py
memory/: documentation.md  memory-part-1.md  pypi-publish.md  test-driven-development.md
resources/: UI_REORDER_DEVELOPMENT_PLAN.md  feature_api_dependency.md
sample_code/: api_example.py  package.json  requirements.txt
scripts/: test_scanner_worker.py
test_npm_project/: package.json
tests/: conftest.py  test_api_categorization.py  test_arm_template_scanner.py  test_cli.py  test_client_cli.py  test_client_compatibility.py  test_cloud_sdk_detector.py  test_cloudformation_scanner.py  test_compliance_checker.py  test_database_scanner.py  test_dependency_categorization.py  test_dependency_categorizer.py  test_dependency_classifier.py  test_devpod_detection.py  test_docker_scanner.py  test_error_handling.py  test_file_type_detector.py  test_file_utils.py  test_gcp_deployment_scanner.py  test_github_actions_scanner.py  test_gitlab_ci_scanner.py  test_html_report.py  test_html_report_api_categorization.py  test_html_report_ui.py  test_ignore_patterns.py  test_infrastructure_integration.py  test_infrastructure_manager.py  test_infrastructure_models.py  test_infrastructure_scanner.py  test_jenkins_scanner.py  test_job_monitor_get_status.py  test_kubernetes_scanner.py  test_language_agnostic_api_scanning.py  test_master_json_updates.py  test_messaging_scanner.py  test_monitoring_detector.py  test_progress_reporting.py  test_reporter_categorization.py  test_scanner.py  test_scanner_api_categorization.py  (+12 more)
(+167 files in other folders)
